# Metal-Samples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
cmake/: MetalShaders.cmake  SetupMetal.cmake  SetupSDL.cmake
triangle/: CMakeLists.txt  main.cpp
